fix mobile menu vertical alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1199,7 +1199,7 @@ button {
 }
 
 .mobile-menu-bottom {
-  margin-top: auto;
+  margin-top: 0;
 }
 
 .mobile-menu-address {
